fixed grid overflow in chromium-based browsers fuck google and chrome

--- a/html/style/play.css
+++ b/html/style/play.css
@@ -29,7 +29,7 @@
 	grid-template-areas:
 		"l f i"
 		"l f c";
-	grid-template-columns:5fr 8fr 1fr;
+	grid-template-columns:5fr 8fr minmax(min-content,1fr);
 	grid-template-rows:auto 1fr;
 	gap:1px;
 }
